[package]
name = "neo"
version = "0.1.0"
edition = "2021"
authors = ["Neo CLI Team"]
description = "The terminal, but smarter."

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
webbrowser = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
fs_extra = "1.3"
dirs = "5.0"
scraper = "0.18"
dialoguer = "0.11" # For interactive prompts if needed
url = "2.4"